packages/flutter_gemma_litertlm/native/litert_lm/include/engine.h

// Opaque pointer for the LiteRT LM Engine.
typedef struct LiteRtLmEngine LiteRtLmEngine;
// Opaque pointer for the LiteRT LM Conversation Optional Args.
typedef struct LiteRtLmConversationOptionalArgs
    LiteRtLmConversationOptionalArgs;
// Opaque pointer for LiteRT LM Session Config.
typedef struct LiteRtLmSessionConfig LiteRtLmSessionConfig;
// Opaque pointer for LiteRT LM Conversation Config.
typedef struct LiteRtLmConversationConfig LiteRtLmConversationConfig;
// Represents the type of sampler.
typedef enum {
  kLiteRtLmSamplerTypeUnspecified = 0,
  // Probabilistically pick among the top k tokens.
  kLiteRtLmSamplerTypeTopK = 1,
  // Probabilistically pick among the tokens such that the sum is greater
  // than or equal to p tokens after first performing top-k sampling.
  kLiteRtLmSamplerTypeTopP = 2,
  // Pick the token with maximum logit (i.e., argmax).
  kLiteRtLmSamplerTypeGreedy = 3,
} LiteRtLmSamplerType;
// Parameters for the sampler.
typedef struct {
  LiteRtLmSamplerType type;
  int32_t top_k;
  float top_p;
  float temperature;
  int32_t seed;
} LiteRtLmSamplerParams;
// Creates a LiteRT LM Session Config.
// The caller is responsible for destroying the config using
// `litert_lm_session_config_delete`.
// @return A pointer to the created config, or NULL on failure.
LITERT_LM_C_API_EXPORT
LiteRtLmSessionConfig* litert_lm_session_config_create();
// Sets the maximum number of output tokens per decode step for this session.
// @param config The config to modify.
// @param max_output_tokens The maximum number of output tokens.
LITERT_LM_C_API_EXPORT
void litert_lm_session_config_set_max_output_tokens(
    LiteRtLmSessionConfig* config, int max_output_tokens);
// Sets whether to apply prompt template for this session.
// @param config The config to modify.
// @param apply_prompt_template Whether to apply prompt template.
LITERT_LM_C_API_EXPORT
void litert_lm_session_config_set_apply_prompt_template(
    LiteRtLmSessionConfig* config, bool apply_prompt_template);
// Sets the sampler parameters for this session config.
// @param config The config to modify.
// @param sampler_params The sampler parameters to use.
LITERT_LM_C_API_EXPORT
void litert_lm_session_config_set_sampler_params(
    LiteRtLmSessionConfig* config, const LiteRtLmSamplerParams* sampler_params);
// Destroys a LiteRT LM Session Config.
// @param config The config to destroy.
LITERT_LM_C_API_EXPORT
void litert_lm_session_config_delete(LiteRtLmSessionConfig* config);
// Creates a LiteRT LM Conversation Config.
// The caller is responsible for destroying the config using
// `litert_lm_conversation_config_delete`.
// @return A pointer to the created config, or NULL on failure.
LITERT_LM_C_API_EXPORT
LiteRtLmConversationConfig* litert_lm_conversation_config_create(
    LiteRtLmEngine* engine, const LiteRtLmSessionConfig* session_config,
    const char* system_message_json, const char* tools_json,
    const char* messages_json, bool enable_constrained_decoding);
// Sets the session config for this conversation config.
// @param config The config to modify.
// @param session_config The session config to use.
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_session_config(
    LiteRtLmConversationConfig* config,
    const LiteRtLmSessionConfig* session_config);
// Sets the system message for this conversation config.
// @param config The config to modify.
// @param system_message_json The system message in JSON format.
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_system_message(
    LiteRtLmConversationConfig* config, const char* system_message_json);
// Sets the tools for this conversation config.
// @param config The config to modify.
// @param tools_json The tools description in JSON array format.
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_tools(LiteRtLmConversationConfig* config,
                                             const char* tools_json);
// Sets the initial messages for this conversation config.
// @param config The config to modify.
// @param messages_json The initial messages in JSON array format.
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_messages(
    LiteRtLmConversationConfig* config, const char* messages_json);
// Sets the extra context for the conversation preface.
// @param config The config to modify.
// @param extra_context_json A JSON string representing the extra context
// object.
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_extra_context(
    LiteRtLmConversationConfig* config, const char* extra_context_json);
// Sets whether to enable constrained decoding for this conversation config.
// @param config The config to modify.
// @param enable_constrained_decoding Whether to enable constrained decoding.
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_enable_constrained_decoding(
    LiteRtLmConversationConfig* config, bool enable_constrained_decoding);
// Sets whether to filter channel content from the KV cache.
// @param config The config to modify.
// @param filter_channel_content_from_kv_cache Whether to filter channel
// content.
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_filter_channel_content_from_kv_cache(
    LiteRtLmConversationConfig* config,
    bool filter_channel_content_from_kv_cache);
// Destroys a LiteRT LM Conversation Config.
// @param config The config to destroy.
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_delete(LiteRtLmConversationConfig* config);
// Creates a LiteRT LM Conversation Optional Args. The caller is responsible
// for destroying the optional args using
// `litert_lm_conversation_optional_args_delete`.
// @return A pointer to the created optional args, or NULL on failure.
LITERT_LM_C_API_EXPORT
LiteRtLmConversationOptionalArgs* litert_lm_conversation_optional_args_create();