lib/core/ffi/litert_lm_bindings.dart

// AUTO-GENERATED by ffigen - DO NOT EDIT
// Source: native/litert_lm/include/engine.h

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// FFI bindings for LiteRT-LM C API
class LiteRtLmBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  LiteRtLmBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  LiteRtLmBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  ffi.Pointer<LiteRtLmSessionConfig> litert_lm_session_config_create() {
    return _litert_lm_session_config_create();
  }

  late final _litert_lm_session_config_createPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<LiteRtLmSessionConfig> Function()>>(
      'litert_lm_session_config_create');
  late final _litert_lm_session_config_create =
      _litert_lm_session_config_createPtr
          .asFunction<ffi.Pointer<LiteRtLmSessionConfig> Function()>();

  void litert_lm_session_config_set_max_output_tokens(
    ffi.Pointer<LiteRtLmSessionConfig> config,
    int max_output_tokens,
  ) {
    return _litert_lm_session_config_set_max_output_tokens(
      config,
      max_output_tokens,
    );
  }

  late final _litert_lm_session_config_set_max_output_tokensPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<LiteRtLmSessionConfig>,
              ffi.Int)>>('litert_lm_session_config_set_max_output_tokens');
  late final _litert_lm_session_config_set_max_output_tokens =
      _litert_lm_session_config_set_max_output_tokensPtr
          .asFunction<void Function(ffi.Pointer<LiteRtLmSessionConfig>, int)>();

  void litert_lm_session_config_set_apply_prompt_template(
    ffi.Pointer<LiteRtLmSessionConfig> config,
    bool apply_prompt_template,
  ) {
    return _litert_lm_session_config_set_apply_prompt_template(
      config,
      apply_prompt_template,
    );
  }

  late final _litert_lm_session_config_set_apply_prompt_templatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<LiteRtLmSessionConfig>,
              ffi.Bool)>>('litert_lm_session_config_set_apply_prompt_template');
  late final _litert_lm_session_config_set_apply_prompt_template =
      _litert_lm_session_config_set_apply_prompt_templatePtr.asFunction<
          void Function(ffi.Pointer<LiteRtLmSessionConfig>, bool)>();

  void litert_lm_session_config_set_sampler_params(
    ffi.Pointer<LiteRtLmSessionConfig> config,
    ffi.Pointer<LiteRtLmSamplerParams> sampler_params,
  ) {
    return _litert_lm_session_config_set_sampler_params(
      config,
      sampler_params,
    );
  }

  late final _litert_lm_session_config_set_sampler_paramsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LiteRtLmSessionConfig>,
                  ffi.Pointer<LiteRtLmSamplerParams>)>>(
      'litert_lm_session_config_set_sampler_params');
  late final _litert_lm_session_config_set_sampler_params =
      _litert_lm_session_config_set_sampler_paramsPtr.asFunction<
          void Function(ffi.Pointer<LiteRtLmSessionConfig>,
              ffi.Pointer<LiteRtLmSamplerParams>)>();

  void litert_lm_session_config_delete(
    ffi.Pointer<LiteRtLmSessionConfig> config,
  ) {
    return _litert_lm_session_config_delete(
      config,
    );
  }

  late final _litert_lm_session_config_deletePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LiteRtLmSessionConfig>)>>(
      'litert_lm_session_config_delete');
  late final _litert_lm_session_config_delete =
      _litert_lm_session_config_deletePtr
          .asFunction<void Function(ffi.Pointer<LiteRtLmSessionConfig>)>();

  ffi.Pointer<LiteRtLmConversationConfig> litert_lm_conversation_config_create(
    ffi.Pointer<LiteRtLmEngine> engine,
    ffi.Pointer<LiteRtLmSessionConfig> session_config,
    ffi.Pointer<ffi.Char> system_message_json,
    ffi.Pointer<ffi.Char> tools_json,
    ffi.Pointer<ffi.Char> messages_json,
    bool enable_constrained_decoding,
  ) {
    return _litert_lm_conversation_config_create(
      engine,
      session_config,
      system_message_json,
      tools_json,
      messages_json,
      enable_constrained_decoding,
    );
  }

  late final _litert_lm_conversation_config_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<LiteRtLmConversationConfig> Function(
              ffi.Pointer<LiteRtLmEngine>,
              ffi.Pointer<LiteRtLmSessionConfig>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Bool)>>('litert_lm_conversation_config_create');
  late final _litert_lm_conversation_config_create =
      _litert_lm_conversation_config_createPtr.asFunction<
          ffi.Pointer<LiteRtLmConversationConfig> Function(
              ffi.Pointer<LiteRtLmEngine>,
              ffi.Pointer<LiteRtLmSessionConfig>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              bool)>();

  void litert_lm_conversation_config_set_session_config(
    ffi.Pointer<LiteRtLmConversationConfig> config,
    ffi.Pointer<LiteRtLmSessionConfig> session_config,
  ) {
    return _litert_lm_conversation_config_set_session_config(
      config,
      session_config,
    );
  }

  late final _litert_lm_conversation_config_set_session_configPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LiteRtLmConversationConfig>,
                  ffi.Pointer<LiteRtLmSessionConfig>)>>(
      'litert_lm_conversation_config_set_session_config');
  late final _litert_lm_conversation_config_set_session_config =
      _litert_lm_conversation_config_set_session_configPtr.asFunction<
          void Function(ffi.Pointer<LiteRtLmConversationConfig>,
              ffi.Pointer<LiteRtLmSessionConfig>)>();

  void litert_lm_conversation_config_set_system_message(
    ffi.Pointer<LiteRtLmConversationConfig> config,
    ffi.Pointer<ffi.Char> system_message_json,
  ) {
    return _litert_lm_conversation_config_set_system_message(
      config,
      system_message_json,
    );
  }

  late final _litert_lm_conversation_config_set_system_messagePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LiteRtLmConversationConfig>,
                  ffi.Pointer<ffi.Char>)>>(
      'litert_lm_conversation_config_set_system_message');
  late final _litert_lm_conversation_config_set_system_message =
      _litert_lm_conversation_config_set_system_messagePtr.asFunction<
          void Function(ffi.Pointer<LiteRtLmConversationConfig>,
              ffi.Pointer<ffi.Char>)>();

  void litert_lm_conversation_config_set_tools(
    ffi.Pointer<LiteRtLmConversationConfig> config,
    ffi.Pointer<ffi.Char> tools_json,
  ) {
    return _litert_lm_conversation_config_set_tools(
      config,
      tools_json,
    );
  }

  late final _litert_lm_conversation_config_set_toolsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LiteRtLmConversationConfig>,
                  ffi.Pointer<ffi.Char>)>>(
      'litert_lm_conversation_config_set_tools');
  late final _litert_lm_conversation_config_set_tools =
      _litert_lm_conversation_config_set_toolsPtr.asFunction<
          void Function(ffi.Pointer<LiteRtLmConversationConfig>,
              ffi.Pointer<ffi.Char>)>();

  void litert_lm_conversation_config_set_messages(
    ffi.Pointer<LiteRtLmConversationConfig> config,
    ffi.Pointer<ffi.Char> messages_json,
  ) {
    return _litert_lm_conversation_config_set_messages(
      config,
      messages_json,
    );
  }

  late final _litert_lm_conversation_config_set_messagesPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LiteRtLmConversationConfig>,
                  ffi.Pointer<ffi.Char>)>>(
      'litert_lm_conversation_config_set_messages');
  late final _litert_lm_conversation_config_set_messages =
      _litert_lm_conversation_config_set_messagesPtr.asFunction<
          void Function(ffi.Pointer<LiteRtLmConversationConfig>,
              ffi.Pointer<ffi.Char>)>();

  void litert_lm_conversation_config_set_extra_context(
    ffi.Pointer<LiteRtLmConversationConfig> config,
    ffi.Pointer<ffi.Char> extra_context_json,
  ) {
    return _litert_lm_conversation_config_set_extra_context(
      config,
      extra_context_json,
    );
  }

  late final _litert_lm_conversation_config_set_extra_contextPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LiteRtLmConversationConfig>,
                  ffi.Pointer<ffi.Char>)>>(
      'litert_lm_conversation_config_set_extra_context');
  late final _litert_lm_conversation_config_set_extra_context =
      _litert_lm_conversation_config_set_extra_contextPtr.asFunction<
          void Function(ffi.Pointer<LiteRtLmConversationConfig>,
              ffi.Pointer<ffi.Char>)>();

  void litert_lm_conversation_config_set_enable_constrained_decoding(
    ffi.Pointer<LiteRtLmConversationConfig> config,
    bool enable_constrained_decoding,
  ) {
    return _litert_lm_conversation_config_set_enable_constrained_decoding(
      config,
      enable_constrained_decoding,
    );
  }

  late final _litert_lm_conversation_config_set_enable_constrained_decodingPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Void Function(
                      ffi.Pointer<LiteRtLmConversationConfig>, ffi.Bool)>>(
          'litert_lm_conversation_config_set_enable_constrained_decoding');
  late final _litert_lm_conversation_config_set_enable_constrained_decoding =
      _litert_lm_conversation_config_set_enable_constrained_decodingPtr
          .asFunction<
              void Function(ffi.Pointer<LiteRtLmConversationConfig>, bool)>();

  void litert_lm_conversation_config_set_filter_channel_content_from_kv_cache(
    ffi.Pointer<LiteRtLmConversationConfig> config,
    bool filter_channel_content_from_kv_cache,
  ) {
    return _litert_lm_conversation_config_set_filter_channel_content_from_kv_cache(
      config,
      filter_channel_content_from_kv_cache,
    );
  }

  late final _litert_lm_conversation_config_set_filter_channel_content_from_kv_cachePtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Void Function(
                      ffi.Pointer<LiteRtLmConversationConfig>, ffi.Bool)>>(
          'litert_lm_conversation_config_set_filter_channel_content_from_kv_cache');
  late final _litert_lm_conversation_config_set_filter_channel_content_from_kv_cache =
      _litert_lm_conversation_config_set_filter_channel_content_from_kv_cachePtr
          .asFunction<
              void Function(ffi.Pointer<LiteRtLmConversationConfig>, bool)>();

  void litert_lm_conversation_config_delete(
    ffi.Pointer<LiteRtLmConversationConfig> config,
  ) {
    return _litert_lm_conversation_config_delete(
      config,
    );
  }

  late final _litert_lm_conversation_config_deletePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LiteRtLmConversationConfig>)>>(
      'litert_lm_conversation_config_delete');
  late final _litert_lm_conversation_config_delete =
      _litert_lm_conversation_config_deletePtr
          .asFunction<void Function(ffi.Pointer<LiteRtLmConversationConfig>)>();

  ffi.Pointer<LiteRtLmConversationOptionalArgs>
      litert_lm_conversation_optional_args_create() {
    return _litert_lm_conversation_optional_args_create();
  }
